<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginViewControllerID" id="BYZ-38-t0r" customClass="LoginViewController" customModule="DataApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WFm-do-s7B">
                                <rect key="frame" x="159" y="301" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginButton"/>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <action selector="loginButtonTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zs9-vH-6AG"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="NAME" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="un2-Gg-ZNh">
                                <rect key="frame" x="20" y="79" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="UserName"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="EMAIL ID" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0UK-sp-Fh2">
                                <rect key="frame" x="20" y="141" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="EmailID"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EJy-6Y-Xh7">
                                <rect key="frame" x="20" y="207" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="Password"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="top" secondItem="0UK-sp-Fh2" secondAttribute="bottom" constant="32" id="3mC-Hm-crU"/>
                            <constraint firstItem="WFm-do-s7B" firstAttribute="top" secondItem="EJy-6Y-Xh7" secondAttribute="bottom" constant="60" id="Bix-sm-6QV"/>
                            <constraint firstItem="WFm-do-s7B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="159" id="ECZ-ao-5z7"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="HZq-e0-KHi"/>
                            <constraint firstItem="un2-Gg-ZNh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="Hvl-dY-hpu"/>
                            <constraint firstItem="WFm-do-s7B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="257" id="K8R-ni-TvE"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="leading" secondItem="0UK-sp-Fh2" secondAttribute="leading" id="XKf-14-SDD"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="trailing" secondItem="un2-Gg-ZNh" secondAttribute="trailing" id="aYF-uy-W5L"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="leading" secondItem="un2-Gg-ZNh" secondAttribute="leading" id="hon-zA-VGZ"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="k95-ZE-NKP"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WFm-do-s7B" secondAttribute="trailing" symbolic="YES" id="uyY-VN-u8D"/>
                            <constraint firstItem="EJy-6Y-Xh7" firstAttribute="trailing" secondItem="0UK-sp-Fh2" secondAttribute="trailing" id="vP6-7j-rY4"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="LoginButton" destination="WFm-do-s7B" id="aAy-wx-ZqQ"/>
                        <outlet property="UserNametextfeild" destination="un2-Gg-ZNh" id="BnK-FQ-wCF"/>
                        <outlet property="emailAddressTextfeild" destination="0UK-sp-Fh2" id="RN8-rV-H8V"/>
                        <outlet property="passwordTextFeild" destination="EJy-6Y-Xh7" id="A4L-u5-rTL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="114" y="-15"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
